feat:轮播添加跳转 && 重构历史播放 && 更新播放器接口

--- a/mini/miniprogram/components/musiccard/musiccard.wxml
+++ b/mini/miniprogram/components/musiccard/musiccard.wxml
@@ -1,5 +1,5 @@
 <!--components/playlist/playlist.wxml-->
-<view class="playlist-container" bind:tap="musicList">
+<view class="playlist-container" bind:tap="musicList" data-idx="{{idx}}">
     <image class="playlist-img" src="{{cover.pic}}" mode="scaleToFill"/>
     <view class="playlist-name">歌名：{{cover.title}}</view>
     <view class="playlist-name">歌手：{{cover.author}}</view>
