--- a/mini/miniprogram/pages/musicMenus/musicMenus.wxml
+++ b/mini/miniprogram/pages/musicMenus/musicMenus.wxml
@@ -1,8 +1,8 @@
 <!--miniprogram/pages/musiclist/musiclist.wxml-->
 <view class="detail-container">
     <view class="playlist-wrap">
-        <block wx:for="{{musiclist}}" wx:key="_id">
-            <m-musiccard cover="{{item}}"></m-musiccard>
+        <block wx:for="{{musiclist}}" wx:for-index="idx" wx:key="_id">
+            <m-musiccard cover="{{item}}" idx="{{idx}}"></m-musiccard>
         </block>
     </view>
 </view>
