--- a/mini/miniprogram/pages/playhistory/playhistory.wxss
+++ b/mini/miniprogram/pages/playhistory/playhistory.wxss
@@ -5,3 +5,10 @@
     justify-content: center;
     height: 160rpx;
 }
+.playlist-wrap{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top: 10rpx;
+    flex-direction: row;
+}
