--- a/mini/miniprogram/pages/about/about.wxml
+++ b/mini/miniprogram/pages/about/about.wxml
@@ -9,7 +9,7 @@
         <view class="desc">项目名也是一直很纠结的，也是很难起的，其实最初的想法是只我的女票专属，也考虑过是否只允许我女票
         浏览，但是之后考虑的越来越多，也希望以后的框架能越来越大，所以就不限于小小熊专属这样的名称了。</view>
         <view class="subtitle">功能列表</view>
-        <view class="desc">简单的todo-list：音乐列表，音乐播放，动态发布，我的，有幸遇见你</view>
+        <view class="desc">简单的todo-list：音乐列表，音乐播放，MV播放，动态发布，我的，有幸遇见你，甜言蜜语</view>
         <view class="subtitle">关于源码</view>
         <view class="desc">关于爱情小副手的源码可关注《前端美食汇》公众号后，回复“源码"来获取源码，每个功能点都可以参考commit记录来
         开发属于你自己的小程序，如果可以的话，也希望您点下广告，表示对我的支持，感谢。</view>
