--- a/mini/miniprogram/components/loveCard/loveCard.wxss
+++ b/mini/miniprogram/components/loveCard/loveCard.wxss
@@ -33,6 +33,11 @@ page{
     font-size: 32rpx;
     font-weight: 400;
     line-height: 1.5;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
 .blog-img{
